test/conformance/chainsaw/ttl/propagation-policy/background/pod-assert.yaml
apiVersion: v1
kind: Pod
status:
  phase: Running
